--- a/stacks/caddywithdocker/docker-compose.yml
+++ b/stacks/caddywithdocker/docker-compose.yml
@@ -15,6 +15,9 @@ services:
     networks:
       - caddy_proxy
 
+volumes:
+  caddy_proxy_data: null
+
 networks:
   caddy_proxy:
     attachable: true
