that's not how compose labels work
Signed-off-by: Sven Dowideit <SvenDowideit@home.org.au>

--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - caddy_proxy
     labels:
-      - "virtual.port: 80"
+      virtual.port: "80"
     restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
