--- a/stacks/wordpress/docker-stack.yml
+++ b/stacks/wordpress/docker-stack.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
    db:
      image: mysql:5.7
+     networks:
+     - db_net
      volumes:
        - db_data:/var/lib/mysql
      restart: always
@@ -15,6 +17,7 @@ services:
    wordpress:
      image: wordpress:latest
      networks:
+     - db_net
      - caddy_proxy
      labels:
        virtual.port: "80"
@@ -30,3 +33,4 @@ volumes:
 networks:
   caddy_proxy:
     external: true
+  db_net:
