need a db_net so wordpress can talk to its database in provate
Signed-off-by: Sven Dowideit <SvenDowideit@home.org.au>

--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   wordpress:
     image: wordpress:latest
     networks:
-      - dn_net
+      - db_net
       - caddy_proxy
     labels:
       virtual.port: "80"
