--- a/stacks/caddywithdocker/docker-compose.yml
+++ b/stacks/caddywithdocker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 443:443
       #- 2019:2019
     environment:
-      - DOMAIN=loc.alho.st
+      - DOMAIN=${DOMAIN:-loc.alho.st}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - caddy_proxy_data:/data
